refactor hiera variables to match module name
Signed-off-by: Ryan F Day <rday@linuxfoundation.org>

--- a/templates/config.inc.php.erb
+++ b/templates/config.inc.php.erb
@@ -1,36 +1,36 @@
 <?php
 
-$config['db_dsnw'] = '<%= @cube['db_provider'] -%>://<%= @cube['db_user'] -%>:<%= @cube['db_pass'] -%>@<%= @cube['db_host'] -%>/<%= @cube['db_dbname'] -%>';
+$config['db_dsnw'] = '<%= @roundcube['db_provider'] -%>://<%= @roundcube['db_user'] -%>:<%= @roundcube['db_pass'] -%>@<%= @roundcube['db_host'] -%>/<%= @roundcube['db_dbname'] -%>';
 
-$config['db_prefix'] = '<%= @cube['db_prefix'] -%>';
+$config['db_prefix'] = '<%= @roundcube['db_prefix'] -%>';
 
-$config['debug_level'] = <%= @cube['debug_level'] -%>;
+$config['debug_level'] = <%= @roundcube['debug_level'] -%>;
 
-$config['default_host'] = '<%= @cube['imap_url'] -%>';
+$config['default_host'] = '<%= @roundcube['imap_url'] -%>';
 
-$config['default_port'] = <%= @cube['imap_port'] -%>;
+$config['default_port'] = <%= @roundcube['imap_port'] -%>;
 
-$config['smtp_server'] = '<%= @cube['smtp_host'] -%>';
+$config['smtp_server'] = '<%= @roundcube['smtp_host'] -%>';
 
-$config['smtp_port'] = <%= @cube['smtp_port'] -%>;
+$config['smtp_port'] = <%= @roundcube['smtp_port'] -%>;
 
-$config['smtp_user'] = '<%= @cube['smtp_user'] -%>';
+$config['smtp_user'] = '<%= @roundcube['smtp_user'] -%>';
 
-$config['smtp_pass'] = '<%= @cube['smtp_pass'] -%>';
+$config['smtp_pass'] = '<%= @roundcube['smtp_pass'] -%>';
 
-$config['support_url'] = '<%= @cube['support_url'] -%>';
+$config['support_url'] = '<%= @roundcube['support_url'] -%>';
 
-$config['auto_create_user'] = <%= @cube['auto_create_user'] -%>;
+$config['auto_create_user'] = <%= @roundcube['auto_create_user'] -%>;
 
-$config['des_key'] = '<%= @cube["des_key"] -%>';
+$config['des_key'] = '<%= @roundcube["des_key"] -%>';
 
 $config['spellcheck_engine'] = 'pspell';
 
 $config['imap_conn_options'] = array(
  'ssl'         => array(
-     'verify_peer'       => <%= @cube['verify_peer'] -%>,
-     'verfify_peer_name' => <%= @cube['verify_peer_name'] -%>,
-     'cafile'            => "/etc/ssl/certs/<%= @cube['server_cert'] -%>",
+     'verify_peer'       => <%= @roundcube['verify_peer'] -%>,
+     'verfify_peer_name' => <%= @roundcube['verify_peer_name'] -%>,
+     'cafile'            => "/etc/ssl/certs/<%= @roundcube['server_cert'] -%>",
   ),
 );
 
