--- a/templates/config.inc.php.erb
+++ b/templates/config.inc.php.erb
@@ -1,6 +1,6 @@
 <?php
 
-$config['db_dsnw'] = '<%= $db_provider -%>://<%= $db_user -%>:<%= $db_pass -%>@<%= $db_host -%>/<%= $db_dbname -%>';
+$config['db_dsnw'] = '<%= @db_provider -%>://<%= @db_user -%>:<%= @db_pass -%>@<%= @db_host -%>/<%= @db_dbname -%>';
 
 $config['db_prefix'] = '<%= $db_prefix -%>';
 
