--- a/templates/config.inc.php.erb
+++ b/templates/config.inc.php.erb
@@ -2,35 +2,35 @@
 
 $config['db_dsnw'] = '<%= @db_provider -%>://<%= @db_user -%>:<%= @db_pass -%>@<%= @db_host -%>/<%= @db_dbname -%>';
 
-$config['db_prefix'] = '<%= $db_prefix -%>';
+$config['db_prefix'] = '<%= @db_prefix -%>';
 
-$config['debug_level'] = <%= $debug_level -%>;
+$config['debug_level'] = <%= @debug_level -%>;
 
-$config['default_host'] = '<%= $imap_url -%>';
+$config['default_host'] = '<%= @imap_url -%>';
 
-$config['default_port'] = <%= $imap_port -%>;
+$config['default_port'] = <%= @imap_port -%>;
 
-$config['smtp_server'] = '<%= $smtp_host -%>';
+$config['smtp_server'] = '<%= @smtp_host -%>';
 
-$config['smtp_port'] = <%= $smtp_port -%>;
+$config['smtp_port'] = <%= @smtp_port -%>;
 
-$config['smtp_user'] = '<%= $smtp_user -%>';
+$config['smtp_user'] = '<%= @smtp_user -%>';
 
-$config['smtp_pass'] = '<%= $smtp_pass -%>';
+$config['smtp_pass'] = '<%= @smtp_pass -%>';
 
-$config['support_url'] = '<%= $support_url -%>';
+$config['support_url'] = '<%= @support_url -%>';
 
-$config['auto_create_user'] = <%= $auto_create_user -%>;
+$config['auto_create_user'] = <%= @auto_create_user -%>;
 
-$config['des_key'] = '<%= $des_key -%>';
+$config['des_key'] = '<%= @des_key -%>';
 
 $config['spellcheck_engine'] = 'pspell';
 
 $config['imap_conn_options'] = array(
  'ssl'         => array(
-     'verify_peer'       => <%= $verify_peer -%>,
-     'verfify_peer_name' => <%= $verify_peer_name -%>,
-     'cafile'            => "/etc/ssl/certs/<%= $server_cert -%>",
+     'verify_peer'       => <%= @verify_peer -%>,
+     'verfify_peer_name' => <%= @verify_peer_name -%>,
+     'cafile'            => "/etc/ssl/certs/<%= @server_cert -%>",
   ),
 );
 
