--- a/templates/roundcubemail.conf.erb
+++ b/templates/roundcubemail.conf.erb
@@ -2,8 +2,9 @@
 # Round Cube Webmail is a browser-based multilingual IMAP client
 #
 
-Alias /roundcube /usr/share/roundcubemail
+Alias /mail /usr/share/roundcubemail
 TypesConfig /etc/mime.types
+RedirectMatch ^/$ /mail
 
 # Define who can access the Webmail
 # You can enlarge permissions once configured
